--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./imagens/sanati 2.png" alt="foto de avatar">
+        <img src="./imagens/tizin123.jpg" alt="foto de avatar">
     </div>
     <div>
       <h1>Sanatiel Nunes</h1>
